--- a/frontend/esquire/src/ui/dialog/EsqEntityDetailsDialog.html
+++ b/frontend/esquire/src/ui/dialog/EsqEntityDetailsDialog.html
@@ -30,39 +30,51 @@
         @for (tab of dictionary; track tab.title; let i = $index;) {      
           <mat-tab [label]="tab.title" bodyClass="{{tabContent(i)}}">
             @for (field of tab.fields; track field.name) {
-              @if (field.type == 'image') {
-                <div class="esq-tab-image-container">
-                  <img class="esq-tab-image" src="{{details.image}}" alt="{{details.image}}" />
-                </div>
-                <mat-divider></mat-divider>
-                @if (i == 0) {
-                  <div class="esq-simple-grid2">
-                    <b>Name:</b>{{node.name}}
-                    <b>Node Type:</b>{{nodeTypeName()}}      
-                    <b>Node ID:</b>{{node.id}}      
-                    <b>Parent Node:</b>{{node.parent ? node.parent.name : 'n/a'}}      
-                  </div>                   
-                  <mat-divider></mat-divider>
-                }
-              } @else if (field.type == 'string') {
+              @if (field.name == "name") {
                   <div class="esq-simple-grid2">
                     <b>{{field.label}}:</b>{{details[field.name]}}
                   </div>                   
-              } @else if (field.type == 'href') {
-                <div class="esq-simple-grid2">
-                  <b>{{field.label}}:</b>
-                  <a href="{{details[field.name][0]}}" target="_blank" rel="noopener noreferrer">
-                    {{details[field.name][1]}}
-                  </a>
-                </div>                   
-              } @else if (field.type == 'tablist') {
-                <esq-tab-list
-                  [esqListElements]="details[field.name]"
-                  [esqListNodeType]="nodeType(field.listvalues_kind)"
-                  [esqListHeader]="field.label"
-                  [esqExplorerCallApi]="callApi"
-                >
-                </esq-tab-list>
+                  <mat-divider></mat-divider>
+                  <div class="esq-simple-grid2">
+                     <mat-divider></mat-divider>
+                     <mat-divider></mat-divider>
+                    <b>Node Type:</b>{{nodeTypeName()}}      
+                    <b>Node ID:</b>{{node.id}}      
+                    <b>Parent Node:</b>{{node.parent ? node.parent.name : 'n/a'}}
+                  </div>                   
+                  <mat-divider></mat-divider>
+              } @else {
+                @if (field.type == 'image') {
+                  <div class="esq-tab-image-container">
+                    <img class="esq-tab-image" src="{{details.image}}" alt="{{details.image}}" />
+                  </div>
+                  <mat-divider></mat-divider>
+                } @else if (field.type == 'href') {
+                  <div class="esq-simple-grid2">
+                    <b>{{field.label}}:</b>
+                    <a href="{{details[field.name][0]}}" target="_blank" rel="noopener noreferrer">
+                      {{details[field.name][1]}}
+                    </a>
+                  </div>                   
+                } @else if (field.type == 'tablist') {
+                  <esq-tab-list
+                    [esqListElements]="details[field.name]"
+                    [esqListNodeType]="nodeTypeFromFormat(field.format)"
+                    [esqListHeader]="field.label"
+                    [esqExplorerCallApi]="callApi"
+                  >
+                  </esq-tab-list>
+                } @else if (field.type == 'tabstring') {
+                  <esq-tab-string
+                    [value]="details[field.name]"
+                    [readOnly]=readOnly
+                  >
+                  </esq-tab-string>
+                } @else { <!--if (field.type.toLowerCase() == 'string') { -->
+                    <div class="esq-simple-grid2">
+                      <b>{{field.label}}:</b>{{details[field.name]}}
+                    </div>                   
+                }
               }
             }
           </mat-tab>
